--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,7 @@
 		<title>Albert Swarm</title>
 		<link rel="stylesheet" type="text/css" href="css/app.css" media="all">
 
-		<script type="text/javascript" src="/reload/reload.js"></script>
-		<script type="text/javascript" src="vendor/jQuery/jquery.js"></script>
+		<script type="text/javascript" src="/vendor/jQuery/jquery.js"></script>
 	</head>
 	<body>
 
