--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 		<title>Albert Swarm</title>
 		<link rel="stylesheet" type="text/css" href="css/app.css" media="all">
 
+		<script type="text/javascript" src="/reload/reload.js"></script>
 		<script type="text/javascript" src="/vendor/jquery/jquery.js"></script>
 	</head>
 	<body>
@@ -13,23 +14,22 @@
 			<img src="images/drawing.png" alt="Albert Swarm - EP" />
 		</div>
 
-		<div id="full-bar"></div>
+		<div id="full-bar">
+			<div class="bar"></div>
+		</div>
 
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		<div class="items"></div>
-		
-		<script>
-			$('#drawing img').on('load', function(){
-				$('#drawing').addClass('show');
-			});
-		</script>
-
+		<div id="bars">
+			<div class="items item-1"></div>
+			<div class="items item-2"></div>
+			<div class="items item-3"></div>
+			<div class="items item-4"></div>
+			<div class="items item-5"></div>
+			<div class="items item-6"></div>
+			<div class="items item-7"></div>
+			<div class="items item-8"></div>
+			<div class="items item-9"></div>
+			<div class="items item-10"></div>
+		</div>
+		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
