added dist task as postinstall when deploying

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Albert Swarm</title>
-		<!-- build:css app.css -->
+		<!-- build:css app/app.css -->
 		<link rel="stylesheet" type="text/css" href="css/app.css" media="all">
 		<!-- /build -->
 
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="/reload/reload.js"></script>
 		<!-- /build -->
 		
-		<!-- build:js jquery.min.js -->
+		<!-- build:js app/jquery.min.js -->
 		<script type="text/javascript" src="/vendor/jquery/jquery.js"></script>
 		<!-- /build -->
 	</head>
@@ -37,9 +37,8 @@
 			<div class="items item-9"></div>
 			<div class="items item-10"></div>
 		</div>
-		
 
-		<!-- build:js app.js -->
+		<!-- build:js app/app.js -->
 		<script type="text/javascript" src="js/app.js"></script>
 		<!-- /build -->
 	</body>
